@@ -1,4 +1,16 @@
 ------------------------------------------------------------------------
+r32 | linmar | 2006-02-19 19:19:10 +0000 (Sun, 19 Feb 2006) | 1 line
+
+test
+------------------------------------------------------------------------
+r31 | linmar | 2006-02-19 19:14:37 +0000 (Sun, 19 Feb 2006) | 1 line
+
+version number bugfix
+------------------------------------------------------------------------
+r30 | linmar | 2006-02-19 19:08:33 +0000 (Sun, 19 Feb 2006) | 1 line
+
+version numbers changed to 3 decimals
+------------------------------------------------------------------------
 r27 | linmar | 2006-02-19 16:45:27 +0000 (Sun, 19 Feb 2006) | 1 line
 
 subversion properties added
